z-index correction

--- a/src/components/bottomMenu/BottomPieControl.sass
+++ b/src/components/bottomMenu/BottomPieControl.sass
@@ -8,7 +8,7 @@
     transform: translate(-50%, -50%)
     
     .BottomPieControl
-        z-index: 3
+        z-index: 4
         position: fixed
         bottom: 0
         transform: translate(-50%, -50%)
@@ -37,7 +37,7 @@
                 background-color: ext.$dark-green
                 color: ext.$dark-blue
                 text-decoration: none
-                z-index: 2
+                z-index: 3
                 height: 40px
                 width: 40px
                 border-radius: 20px
