--- a/src/components/pieControl/PieControl.sass
+++ b/src/components/pieControl/PieControl.sass
@@ -10,7 +10,7 @@ $max-width-menu: 170px
     z-index: 1
 
     .pieButton
-        z-index: 3
+        z-index: 4
         position: absolute
         width: 50px
         height: 100px
@@ -39,7 +39,7 @@ $max-width-menu: 170px
         left: 0px
         width: 50px
         height: 0px
-        z-index: 2
+        z-index: 3
 
         &:hover
             width: $max-width-menu
